.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
20:17:00 **** Clean-only build of configuration Debug for project Clase_7-cadenas ****
rm -rf src/Clase_7-cadenas.d src/Clase_7-cadenas.o Clase_7-cadenas.exe 
20:17:03 **** Rebuild of configuration Debug for project Clase_7-cadenas ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Clase_7-cadenas.o" "..\\src\\Clase_7-cadenas.c" 
..\src\Clase_7-cadenas.c: In function 'main':
..\src\Clase_7-cadenas.c:27:33: warning: excess elements in array initializer
   27 |  char texto[4]={'A','B','C','D',0};//SIEMPRE en comillas ''.
      |                                 ^
..\src\Clase_7-cadenas.c:27:33: note: (near initialization for 'texto')
gcc -o Clase_7-cadenas.exe "src\\Clase_7-cadenas.o" 
Info: Nothing to build for Clase_7-cadenas
20:18:09 **** Incremental Build of configuration Debug for project Clase_7-cadenas ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Clase_7-cadenas.o" "..\\src\\Clase_7-cadenas.c" 
gcc -o Clase_7-cadenas.exe "src\\Clase_7-cadenas.o" 
Info: Nothing to build for Clase_7-cadenas
20:18:27 **** Incremental Build of configuration Debug for project Clase_7-cadenas ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Clase_7-cadenas.o" "..\\src\\Clase_7-cadenas.c" 
..\src\Clase_7-cadenas.c: In function 'main':
..\src\Clase_7-cadenas.c:27:33: warning: excess elements in array initializer
   27 |  char texto[4]={'A','B','C','D',0};//SIEMPRE en comillas ''.
      |                                 ^
..\src\Clase_7-cadenas.c:27:33: note: (near initialization for 'texto')
gcc -o Clase_7-cadenas.exe "src\\Clase_7-cadenas.o" 
Info: Nothing to build for Clase_7-cadenas
20:18:42 **** Incremental Build of configuration Debug for project Clase_7-cadenas ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Clase_7-cadenas.o" "..\\src\\Clase_7-cadenas.c" 
..\src\Clase_7-cadenas.c: In function 'main':
..\src\Clase_7-cadenas.c:27:33: warning: excess elements in array initializer
   27 |  char texto[4]={'A','B','C','D','\0'};//SIEMPRE en comillas ''.
      |                                 ^~~~
..\src\Clase_7-cadenas.c:27:33: note: (near initialization for 'texto')
gcc -o Clase_7-cadenas.exe "src\\Clase_7-cadenas.o" 
20:18:50 **** Incremental Build of configuration Debug for project Clase_7-cadenas ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Clase_7-cadenas.o" "..\\src\\Clase_7-cadenas.c" 
gcc -o Clase_7-cadenas.exe "src\\Clase_7-cadenas.o" 
Info: Nothing to build for Clase_7-cadenas
20:18:58 **** Incremental Build of configuration Debug for project Clase_7-cadenas ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Clase_7-cadenas.o" "..\\src\\Clase_7-cadenas.c" 
gcc -o Clase_7-cadenas.exe "src\\Clase_7-cadenas.o" 
Info: Nothing to build for Clase_7-cadenas
20:19:07 **** Incremental Build of configuration Debug for project Clase_7-cadenas ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Clase_7-cadenas.o" "..\\src\\Clase_7-cadenas.c" 
gcc -o Clase_7-cadenas.exe "src\\Clase_7-cadenas.o" 
Info: Nothing to build for Clase_7-cadenas
20:47:40 **** Incremental Build of configuration Debug for project Clase_7-cadenas ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Clase_7-cadenas.o" "..\\src\\Clase_7-cadenas.c" 
..\src\Clase_7-cadenas.c: In function 'main':
..\src\Clase_7-cadenas.c:31:2: error: 'i' undeclared (first use in this function)
   31 |  i = strlen(texto);
      |  ^
..\src\Clase_7-cadenas.c:31:2: note: each undeclared identifier is reported only once for each function it appears in
..\src\Clase_7-cadenas.c:32:2: error: 'j' undeclared (first use in this function)
   32 |  j = sizeof(texto);
      |  ^
20:48:36 **** Incremental Build of configuration Debug for project Clase_7-cadenas ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Clase_7-cadenas.o" "..\\src\\Clase_7-cadenas.c" 
gcc -o Clase_7-cadenas.exe "src\\Clase_7-cadenas.o" 
Info: Nothing to build for Clase_7-cadenas
20:48:55 **** Incremental Build of configuration Debug for project Clase_7-cadenas ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Clase_7-cadenas.o" "..\\src\\Clase_7-cadenas.c" 
gcc -o Clase_7-cadenas.exe "src\\Clase_7-cadenas.o" 
Info: Nothing to build for Clase_7-cadenas
